--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 onsubmit="submitHandler(this)"
         >
           <div class="row mt-5 border p-5 shadow">
-            <div class="col-md-7">
+            <div class="col-sm-7">
               <input id = "task"
                 type="text"
                 class="form-control"
@@ -43,7 +43,7 @@ onsubmit="submitHandler(this)"
                 name="task"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-sm-2">
               <input
               name="hours"
               id = "hours"
@@ -54,33 +54,22 @@ onsubmit="submitHandler(this)"
                 min="1"
               />
             </div>
-            <div class="col-md-3 d-grid">
-              <button class="btn btn-primary" type="submit" >Add TASK</button>
+            <div class="col-sm-3 d-grid">
+              <button class="btn btn-primary"  type="submit" >Add TASK</button>
             </div>
           </div>
         </form>
         <div class="row">
-          <div class="col-6 mt-4">
+          <div class="col-sm-6 mt-4">
             <h3 class="text-center">Entry List</h3>
             <hr />
             <table class="table table-striped border shadow table-hover">
-              <tbody>
-                <tr>
-                  <td scope="row">1</td>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td class="text-end">
-                    <button class="btn btn-danger mx-2">
-                      <i class="fa-solid fa-trash"></i></button
-                    ><button class="btn btn-success">
-                      <i class="fa-solid fa-arrow-right"></i>
-                    </button>
-                  </td>
-                </tr>
+              <tbody id="entrylist">
+                
               </tbody>
             </table>
           </div>
-          <div class="col-6 mt-4">
+          <div class="col-sm-6 mt-4">
             <h3 class="text-center">Bad List</h3>
             <hr />
             <table class="table table-striped border shadow table-hover">
@@ -94,7 +83,7 @@ onsubmit="submitHandler(this)"
                     <button class="btn btn-warning">
                       <i class="fa-solid fa-arrow-left"></i>
                     </button>
-                    <button class="btn btn-danger mx-2" onclick="onclickHnadler()">
+                    <button class="btn btn-danger mx-2" >
                       <i class="fa-solid fa-trash"></i></button
                     >
                   </td>
