--- a/index.html
+++ b/index.html
@@ -73,21 +73,8 @@ onsubmit="submitHandler(this)"
             <h3 class="text-center">Bad List</h3>
             <hr />
             <table class="table table-striped border shadow table-hover">
-              <tbody>
-                <tr>
-                  <td scope="row">1</td>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td class="text-end">
-                    
-                    <button class="btn btn-warning">
-                      <i class="fa-solid fa-arrow-left"></i>
-                    </button>
-                    <button class="btn btn-danger mx-2" >
-                      <i class="fa-solid fa-trash"></i></button
-                    >
-                  </td>
-                </tr>
+              <tbody id="badlist">
+                
               </tbody>
             </table>
           </div>
