fix up the arraow fuction for rendering data from entry list to bad list and vice versa

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 onsubmit="submitHandler(this)"
         >
           <div class="row mt-5 border p-5 shadow">
-            <div class="col-sm-7">
+            <div class="col-sm-6">
               <input id = "task"
                 type="text"
                 class="form-control"
@@ -43,7 +43,7 @@ onsubmit="submitHandler(this)"
                 name="task"
               />
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-3">
               <input
               name="hours"
               id = "hours"
@@ -52,6 +52,7 @@ onsubmit="submitHandler(this)"
                 placeholder="Hours"
                 aria-label="Last name"
                 min="1"
+                max =
               />
             </div>
             <div class="col-sm-3 d-grid">
