added more validation for total hours and change the title

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <div class="wrapper p-5">
       <div class="container">
-        <h1 class="text-center">SAVE YOUR TIME</h1>
+        <h1 class="text-center">TimeWise: Your Personal Time Tracker & Saver</h1>
         <!-- FORM -->
         <form
           action="javascript:void(0);"
@@ -38,7 +38,7 @@ onsubmit="submitHandler(this)"
               <input id = "task"
                 type="text"
                 class="form-control"
-                placeholder="First name"
+                placeholder="Enter the activity Name"
                 aria-label="First name"
                 name="task"
               />
@@ -63,7 +63,7 @@ onsubmit="submitHandler(this)"
         <div class="row">
           <!-- entry list  -->
           <div class="col-sm-6 mt-4">
-            <h3 class="text-center">Entry List</h3>
+            <h3 class="text-center">TASKS List</h3>
             <hr />
             <table class="table table-striped border shadow table-hover">
               <tbody id="entrylist">
@@ -73,7 +73,7 @@ onsubmit="submitHandler(this)"
           </div>
           <!-- bad list  -->
           <div class="col-sm-6 mt-4">
-            <h3 class="text-center">Bad List</h3>
+            <h3 class="text-center">BAD TASKS LIST</h3>
             <hr />
             <table class="table table-striped border shadow table-hover">
               <tbody id="badlist">
