--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           action="javascript:void(0);"
 onsubmit="submitHandler(this)"
         >
-          <div class="row mt-5 border p-5 shadow">
-            <div class="col-sm-6">
+          <div class="row row1  mt-5  border p-5  shadow">
+            <div class="col-sm-6  ">
               <input id = "task"
                 type="text"
                 class="form-control"
